tests/ui/parser/field-name-in-tuple-struct.stderr
error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/field-name-in-tuple-struct.rs:3:13
   |
LL | struct Foo(a:u8,b:u8);
   |             ^ expected one of 7 possible tokens
   |
help: if you wanted to create a tuple struct, remove field names:
  --> $DIR/field-name-in-tuple-struct.rs:3:12
   |
LL | struct Foo(a:u8,b:u8);
   |            --   --
help: if you wanted to create a regular struct, use curly braces:
   |
LL - struct Foo(a:u8,b:u8);
LL + struct Foo{a:u8,b:u8}
   |

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/field-name-in-tuple-struct.rs:8:13
   |
LL | struct Bar(a:u8,u8,c:u8);
   |             ^ expected one of 7 possible tokens
   |
help: if you wanted to create a tuple struct, remove field names:
  --> $DIR/field-name-in-tuple-struct.rs:8:12
   |
LL | struct Bar(a:u8,u8,c:u8);
   |            --      --
help: if you wanted to create a regular struct, use curly braces:
   |
LL - struct Bar(a:u8,u8,c:u8);
LL + struct Bar{a:u8,u8,c:u8}
   |

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/field-name-in-tuple-struct.rs:14:10
   |
LL |     Foo(a:u8),
   |          ^ expected one of 7 possible tokens
   |
help: if you wanted to create a tuple struct, remove field names:
  --> $DIR/field-name-in-tuple-struct.rs:14:9
   |
LL |     Foo(a:u8),
   |         --
help: if you wanted to create a regular struct, use curly braces:
   |
LL -     Foo(a:u8),
LL +     Foo{a:u8},
   |

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/field-name-in-tuple-struct.rs:21:23
   |
LL | struct Baz(std::string:String);
   |                       ^ expected one of 7 possible tokens

error: aborting due to 4 previous errors

